# epikon

./: CMakeLists.txt  CPackOptions.cmake  ProjectHome.md  ProtocolNotes.md  README.txt  epikondefs.h.in
client/: CMakeLists.txt  epikonattack.h  epikongame.cpp  epikongamescene.cpp  epikonplanet.cpp  epikonplayer.h  epikonshipitem.h  main.cpp  resources.qrc  serverdialog.ui
epikon/: CMakeLists.txt  CPackOptions.cmake  epikon.pro  epikonattack.cpp  epikonattack.h  epikonclient.h  epikonconnectionmanager.h  epikongame.cpp  epikongame.h  epikongamescene.cpp  epikongamescene.h  epikonmainwindow.cpp  epikonmainwindow.h  epikonmainwindow.ui  epikonplanet.cpp  epikonplanetitem.cpp  epikonplanetitem.h  epikonplayer.cpp  epikonplayer.h  epikonshipitem.cpp  epikonshipitem.h  main.cpp  resources.qrc
epikon/src/: CMakeLists.txt  protocolstates.txt
epikon/src/client/: CMakeLists.txt  connectiondialog.ui  epikonattack.cpp  epikonconnection.cpp  epikonconnection.h  epikongame.cpp  epikongame.h  epikongamescene.cpp  epikongamescene.h  epikonmainwindow.cpp  epikonmainwindow.h  epikonmainwindow.ui  epikonnetworkgame.cpp  epikonnetworkgame.h  epikonplanet.h  epikonplanetitem.h  epikonplayer.cpp  main.cpp
epikon/src/client/resources/style/: epikon-xmas.qss  epikon.qss
epikon/src/protocol/: CMakeLists.txt  command.cpp  command.h  epikonprotocolcommand.cpp  protocol.cpp  protocol.h
epikon/src/server/: CMakeLists.txt  epikonclient.cpp  epikonclient.h  epikonconnectionmanager.cpp  epikonconnectionmanager.h  epikonprotocolcommand.cpp  epikonprotocolcommand.h  epikonserver.cpp  epikonserver.h  main.cpp  player.cpp  player.h
protocol/: CMakeLists.txt  protocol.h
server/: CMakeLists.txt  epikonclient.cpp  epikonclient.h  epikonserver.h  main.cpp
